--- a/lry.html
+++ b/lry.html
@@ -31,34 +31,119 @@
 	</head>
 	<body>
 		<div class="box">
-			<p id="aa">做我刘好女朋友好不好</p>
+			<p>做我女朋友好不好</p>
 			<a id="ty" href="Document.html">好</a>
 			<a id="jj">不好</a>
-			<div id="ty_box" class="none">
-				<h1>带你周游世界</h1>	
-				<canvas id="mycanvas" width="1280" height="668"></canvas>
-	    		<img id="tulip" src="Document_files/heart.png" alt="heart">
-			</div>
 		</div>
 		<script type="text/javascript">
 			
 			window.onload=function(){
 				var ty=document.getElementById("ty");
 				var jj=document.getElementById("jj");
-				var ty_box=document.getElementById("ty_box");
-				var jj_box=document.getElementById("jj_box");
-				var aa=document.getElementById("aa");
-				var jjb=document.getElementById("jjb");
-				ty.onclick=function(){
-					ty_box.style.display="block";
-					aa.style.display="none";
-				}
 				jj.onclick=function(){
 					if(confirm("在考虑考虑？")){
 					}else{
-						for(var i=1; i<99; i++){
-						alert("重新选择");
-						}
+						
+						alert("点99次，重新选择");
+						alert("还有98次");
+						alert("还有97次");
+						alert("还有96次");
+						alert("还有95次");
+						alert("还有94次");
+						alert("还有93次");
+						alert("还有92次");
+						alert("还有91次");
+						alert("还有90次");
+						alert("还有89次");
+						alert("还有88次");
+						alert("还有87次");
+						alert("还有86次");
+						alert("还有85次");
+						alert("还有84次");
+						alert("还有83次");
+						alert("还有82次");
+						alert("还有81次");
+						alert("还有80次");
+						alert("还有79次");
+						alert("还有78次");
+						alert("还有77次");
+						alert("还有76次");
+						alert("还有75次");
+						alert("还有74次");
+						alert("还有73次");
+						alert("还有72次");
+						alert("还有71次");
+						alert("还有70次");
+						alert("还有69次");
+						alert("还有68次");
+						alert("还有67次");
+						alert("还有66次");
+						alert("还有65次");
+						alert("还有64次");
+						alert("还有63次");
+						alert("还有62次");
+						alert("还有61次");
+						alert("还有60次");
+						alert("还有59次");
+						alert("还有58次");
+						alert("还有57次");
+						alert("还有56次");
+						alert("还有55次");
+						alert("还有54次");
+						alert("还有53次");
+						alert("还有52次");
+						alert("还有51次");
+						alert("还有50次");
+						alert("还有49次");
+						alert("还有48次");
+						alert("还有47次");
+						alert("还有46次");
+						alert("还有45次");
+						alert("还有44次");
+						alert("还有43次");
+						alert("还有42次");
+						alert("还有41次");
+						alert("还有40次");
+						alert("还有39次");
+						alert("还有38次");
+						alert("还有37次");
+						alert("还有36次");
+						alert("还有35次");
+						alert("还有34次");
+						alert("还有33次");
+						alert("还有32次");
+						alert("还有31次");
+						alert("还有30次");
+						alert("还有29次");
+						alert("还有28次");
+						alert("还有27次");
+						alert("还有26次");
+						alert("还有25次");
+						alert("还有24次");
+						alert("还有23次");
+						alert("还有22次");
+						alert("还有21次");
+						alert("还有20次");
+						alert("还有19次");
+						alert("还有18次");
+						alert("还有17次");
+						alert("还有16次");
+						alert("还有15次");
+						alert("还有14次");
+						alert("还有13次");
+						alert("还有12次");
+						alert("还有11次");
+						alert("还有10次");
+						alert("还有9次");
+						alert("还有8次");
+						alert("还有7次");
+						alert("还有6次");
+						alert("还有5次");
+						alert("还有4次");
+						alert("还有3次");
+						alert("还有2次");
+						alert("还有1次");
+						
 					}
 				}
 			}
